webconfig add cache

--- a/web.config
+++ b/web.config
@@ -105,5 +105,11 @@
                 </add>
             </traceFailedRequests>
         </tracing>
+        <caching enabled="true" enableKernelCache="true" maxCacheSize="1000" maxResponseSize="512000">
+            <profiles>
+                <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+            </profiles>
+        </caching>
     </system.webServer>
 </configuration>
