webconfig Cache Control

--- a/web.config
+++ b/web.config
@@ -107,8 +107,8 @@
         </tracing>
         <caching enabled="true" enableKernelCache="true" maxCacheSize="1000" maxResponseSize="512000">
             <profiles>
-                <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-                <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".css" policy="CacheForTimePeriod" kernelCachePolicy="CacheForTimePeriod" duration="24.00:00:00" />
+                <add extension=".js" policy="CacheForTimePeriod" kernelCachePolicy="CacheForTimePeriod" duration="24.00:00:00" />
             </profiles>
         </caching>
     </system.webServer>
