--- a/web.config
+++ b/web.config
@@ -4,7 +4,7 @@
         <rewrite>
             <rules>
                 <clear />
-                <rule name="HTTPS Redirect" enabled="false" stopProcessing="true">
+                <rule name="HTTPS Redirect" enabled="true" stopProcessing="true">
                     <match url="(.*)" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{HTTPS}" pattern="^OFF$" />
