--- a/web.config
+++ b/web.config
@@ -4,7 +4,7 @@
         <rewrite>
             <rules>
                 <clear />
-                <rule name="HTTPS Redirect" enabled="true" stopProcessing="true">
+                <rule name="HTTPS Redirect" enabled="false" stopProcessing="true">
                     <match url="(.*)" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{HTTPS}" pattern="^OFF$" />
@@ -80,7 +80,7 @@
         </rewrite>
         <security>
             <requestFiltering>
-                <requestLimits maxUrl="40960" maxQueryString="20480" />
+                <requestLimits maxUrl="20480" maxQueryString="20480" />
             </requestFiltering>
         </security>
         <tracing>
