webconfig Tracing disabled

--- a/web.config
+++ b/web.config
@@ -11,7 +11,7 @@
                     </conditions>
                     <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" appendQueryString="false" redirectType="Permanent" />
                 </rule>
-                <rule name="Block Bad Bots" stopProcessing="true">
+                <rule name="Block Bad Bots" enabled="true" stopProcessing="true">
                     <match url=".*" />
                     <conditions logicalGrouping="MatchAny" trackAllCaptures="false">
                         <add input="{HTTP_USER_AGENT}" pattern=".*seokicks.*" />
@@ -26,27 +26,27 @@
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="CustomResponse" statusCode="403" statusReason="Forbidden - internal config" statusDescription="Forbidden" />
                 </rule>
-                <rule name="Webtrees data">
+                <rule name="Webtrees data" enabled="true">
                     <match url="^data(/|$)" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="CustomResponse" statusCode="403" statusReason="Forbidden" statusDescription="Forbidden" />
                 </rule>
-                <rule name="Webtrees app">
+                <rule name="Webtrees app" enabled="true">
                     <match url="^app(/|$)" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="CustomResponse" statusCode="403" statusReason="Forbidden" statusDescription="Forbidden" />
                 </rule>
-                <rule name="Webtrees modules">
+                <rule name="Webtrees modules" enabled="true">
                     <match url="^modules" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="CustomResponse" statusCode="403" statusReason="Forbidden" statusDescription="Forbidden" />
                 </rule>
-                <rule name="Webtrees resources">
+                <rule name="Webtrees resources" enabled="true">
                     <match url="^resources(/|$)" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="CustomResponse" statusCode="403" statusReason="Forbidden" statusDescription="Forbidden" />
                 </rule>
-                <rule name="Webtrees vendor">
+                <rule name="Webtrees vendor" enabled="true">
                     <match url="^vendor(/|$)" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="CustomResponse" statusCode="403" statusReason="Forbidden" statusDescription="Forbidden" />
@@ -83,18 +83,6 @@
                 <requestLimits maxUrl="20480" maxQueryString="20480" />
             </requestFiltering>
         </security>
-        <tracing>
-            <traceFailedRequests>
-                <add path="*">
-                    <traceAreas>
-                        <add provider="ASP" verbosity="Verbose" />
-                        <add provider="ISAPI Extension" verbosity="Verbose" />
-                        <add provider="WWW Server" areas="Authentication,Security,Filter,StaticFile,CGI,Compression,Cache,RequestNotifications,Module,FastCGI,WebSocket,ANCM,Rewrite" verbosity="Verbose" />
-                    </traceAreas>
-                    <failureDefinitions timeTaken="00:00:00" statusCodes="400-599,301" />
-                </add>
-            </traceFailedRequests>
-        </tracing>
         <caching enabled="true" enableKernelCache="true" maxCacheSize="1000" maxResponseSize="512000">
             <profiles>
             </profiles>
@@ -106,7 +94,7 @@
             </customHeaders>
         </httpProtocol>
         <staticContent>
-            <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="2.00:00:00" />
+            <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="30.00:00:00" />
         </staticContent>
     </system.webServer>
 </configuration>
